--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -59,4 +59,13 @@ ion-title {
   width: 40vw;
   height: 15vw;
   font-size: 120%;
-} 
+}
+
+.pathDiv span input {
+  text-align: center;
+  height: 15vw;
+}
+
+.font-size-200 {
+  font-size: 200%;
+}
