--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -69,3 +69,15 @@ ion-title {
 .font-size-200 {
   font-size: 200%;
 }
+
+.pathDiv {
+  margin-top: 1rem;
+}
+
+.inputDiv {
+  height: 40vh;
+}
+
+.resultDiv {
+  height: 48vh;
+}
